--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
     "name": "ecare-root",
     "private": true,
     "scripts": {
-      "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
+        "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
     },
     "devDependencies": {
-      "concurrently": "^8.0.1"
+        "concurrently": "^8.0.1"
+    },
+    "dependencies": {
+        "dotenv": "^16.5.0",
+        "mysql2": "^3.14.1"
     }
-  }
-  
+}
