--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "devDependencies": {
         "concurrently": "^8.0.1"
     },
-     "dependencies": {
-    "dotehv": "^16.5.0",  
-    "mysql2": "^3.14.1"
+    "dependencies": {
+        "@types/axios": "^0.9.36",
+        "axios": "^1.9.0",
+        "dotenv": "^16.5.0",
+        "lucide-react": "^0.510.0",
+        "mysql2": "^3.14.1"
+    }
 }
