--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "eCare": "file:",
     "lucide-react": "^0.510.0",
+    "lightningcss": "^1.30.1",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
