--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.6.0",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
