--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/node": "^4.1.6",
-    "eCare": "file:",
-    "lightningcss": "^1.29.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.3.1",
+    "@tailwindcss/node": "^4.1.6",
+    "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "eCare": "file:",
+    "lightningcss": "^1.29.3",
     "lucide-react": "^0.510.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
