--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/x-date-pickers": "^8.3.1",
     "dayjs": "^1.11.13",
     "eCare": "file:",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
