--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/next": "^8.0.7",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "concurrently": "^8.0.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
     "ecare-root": "file:",
     "js-cookie": "^3.0.5",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   }
 }
